feat: Agent framework refactor + Docker deployment + security hardening